--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     },
     "plugins": [{ "name": "next" }]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "components/ComponentRenderer/ReactDataTableComponent.js"],
   "exclude": ["node_modules"]
 }
