--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tabler/icons-react": "^2.40.0",
     "next": "^14.0.3",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "styled-components": "^6.1.1",
