--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-csv": "^2.2.2",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
+    "recharts": "^2.10.1",
     "styled-components": "^6.1.1",
     "vanilla-jsoneditor": "^0.19.0",
     "zustand": "^4.4.6"
